--- a/.mise.toml
+++ b/.mise.toml
@@ -8,6 +8,7 @@ pre-commit = "3.7.0"
 shellcheck = "0.10.0"
 "go:github.com/spf13/cobra-cli" = "1.3.0"
 "npm:prettier" = "3.2.5"
+"npm:scaffdog" = "3.0.0"
 
 [tasks.setup]
 description = "Setup (Runs all `setup:*` tasks)"
